--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.1.2"
+    "tailwindcss": "^4.1.2",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
